tests/error/linear_errors/tuple_drop.err
Error: Drop violation (at $FILE:6:11)
  | 
4 | @compile_guppy
5 | def foo() -> qubit:
6 |     return (1, qubit(), qubit())[1]
  |            ^^^^^^^^^^^^^^^^^^^^^ Non-droppable items inside expression of type `(int, qubit,
  |                                  qubit)` are leaked

Help: Consider assigning this value to a local variable before subscripting it

Guppy compilation failed due to 1 previous error
